--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('com.jayway.jsonpath:json-path')
     testCompile("junit:junit")
+    testCompile "org.codehaus.groovy:groovy-all:2.2.0"
+    testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
 }
 
 
