New grovvy spring security project added.

--- a/groovy-security-gradle/build.gradle
+++ b/groovy-security-gradle/build.gradle
@@ -1,31 +1,24 @@
+group 'mr.f'
+version '1.0'
+
 buildscript {
-    ext {
-        springBootVersion = '1.2.6.RELEASE'
-    }
+
     repositories {
         mavenCentral()
         jcenter()
     }
+
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath('io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE')
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.2.4.RELEASE'
     }
 }
 
 apply plugin: 'groovy'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
 apply plugin: 'spring-boot'
-apply plugin: 'io.spring.dependency-management'
-
-
-jar {
-    baseName = 'spring-boot-sandbox'
-    version = '0.0.1-SNAPSHOT'
-}
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 sourceSets {
@@ -45,31 +38,21 @@ configurations {
 }
 
 dependencies {
-
     compile 'org.codehaus.groovy:groovy-all'
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile("org.springframework.boot:spring-boot-starter-data-rest")
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-security'
+    compile 'org.grails:gorm-hibernate4-spring-boot:1.1.0.RELEASE'
 
-    runtime('org.hsqldb:hsqldb')
 
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('com.jayway.jsonpath:json-path')
-    testCompile("junit:junit")
+    runtime 'org.hsqldb:hsqldb'
+
     testCompile 'org.spockframework:spock-core'
+    testCompile 'cglib:cglib-nodep:2.2'       // For mocking classes
+    testCompile 'org.objenesis:objenesis:1.2' // For mocking final classes
+    testCompile 'org.grails:grails-test:3.1.0.M2'
 
-    integrationTestCompile 'org.spockframework:spock-core'
     integrationTestCompile 'org.spockframework:spock-spring'
     integrationTestCompile 'org.springframework:spring-test'
-}
-
-
-eclipse {
-    classpath {
-        containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-        containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-    }
 }
 
 tasks.withType(Test) {
@@ -85,7 +68,5 @@ task integrationTest(type: Test) {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.7'
+    gradleVersion = '2.4'
 }
-
-
