--- a/java-gradle/src/main/resources/application.yml
+++ b/java-gradle/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
-  contextPath: /api
-  port: 12345
+  contextPath: /api02
+  port: 12111
 spring:
   datasource:
     url: jdbc:hsqldb:mem:apiDB
